--- a/styles/addTaskBoard.css
+++ b/styles/addTaskBoard.css
@@ -229,7 +229,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(128, 128, 128, 0.5);
-  z-index: 999;
+  z-index: 40;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -249,7 +249,7 @@
   padding: 75px;
   padding-top: 50px;
   border-radius: 25px;
-  z-index: 1000;
+  z-index: 50;
   opacity: 0;
   pointer-events: none;
   transform: translateX(-100%);
