--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -115,7 +115,7 @@
   border: none;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .add-contact-button:hover {
@@ -216,7 +216,7 @@ hr {
   background-color: white;
   height: 592px;
   max-width: 1212px;
-  z-index: 2000;
+  z-index: 80;
   border-radius: 24px;
   transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
@@ -246,7 +246,7 @@ hr {
   height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 1500;
+  z-index: 70;
 }
 
 .contact-overlay-header {
@@ -267,7 +267,7 @@ hr {
   top: 60px;
   right: 50px;
   cursor: pointer;
-  z-index: 2001;
+  z-index: 90;
 }
 
 .close-icon:hover {
@@ -310,7 +310,7 @@ hr {
   position: absolute;
   left: 12px;
   margin-top: 4px;
-  z-index: 1;
+  z-index: 10;
 }
 
 #name-error-msg,
@@ -424,7 +424,7 @@ hr {
   border-radius: 8px;
   font-size: 18px;
   transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 3000;
+  z-index: 100;
 }
 
 .add-contact-successful.active {
@@ -645,7 +645,7 @@ hr {
     transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
-    z-index: 10;
+    z-index: 20;
   }
 
   .contact-inputs-container,
