--- a/styles/header.css
+++ b/styles/header.css
@@ -8,7 +8,7 @@ header {
   background-color: white;
   position: fixed;
   top: 0;
-  z-index: 99;
+  z-index: 30;
   box-shadow: 0 3px 3px rgb(230, 231, 231);
 }
 
