--- a/styles/loginSignUp.css
+++ b/styles/loginSignUp.css
@@ -249,7 +249,7 @@ input:-webkit-autofill {
   transform: translate(-50%, -50%) scale(1);
   animation: slide-out-tl 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
   animation-delay: 1s;
-  z-index: 1000;
+  z-index: 50;
 }
 
 @keyframes slide-out-tl {
@@ -278,7 +278,7 @@ input:-webkit-autofill {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  z-index: 110;
 }
 
 #signup-message {
