--- a/styles/summary.css
+++ b/styles/summary.css
@@ -466,7 +466,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 110;
     font-size: 24px;
 
     animation: fadeOut 1.5s ease forwards;
